RESOLVED FIXED272040
REGRESSION(275943@main): WebKit apps can crash on launch in ApplicationStateTracker::setScene()
https://bugs.webkit.org/show_bug.cgi?id=272040
Summary REGRESSION(275943@main): WebKit apps can crash on launch in ApplicationStateT...
Jer Noble
Reported 2024-04-02 10:38:45 PDT
REGRESSION(275943@main): WebKit apps can crash on launch in ApplicationStateTracker::setScene()
Attachments
Jer Noble
Comment 1 2024-04-02 10:38:49 PDT
Jer Noble
Comment 2 2024-04-02 10:40:57 PDT
EWS
Comment 3 2024-04-02 16:15:52 PDT
Committed 276979@main (f756d5eafc4c): <https://commits.webkit.org/276979@main> Reviewed commits have been landed. Closing PR #26733 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.