REGRESSION(275943@main): WebKit apps can crash on launch in ApplicationStateTracker::setScene() https://bugs.webkit.org/show_bug.cgi?id=272040 rdar://124983721

Reviewed by Eric Carlson and Andy Estes.

KVO will use a NSNull object as the value of a change when the windowScene becomes nil. Detect this case
and call setScene() with nil rather than the NSNull object.

* Source/WebKit/UIProcess/ApplicationStateTracker.mm:
(-[WKUIWindowSceneObserver observeValueForKeyPath:ofObject:change:context:]):

Canonical link: https://commits.webkit.org/276979@main